--- a/Kudos.DataBasing.UnitTest.csproj
+++ b/Kudos.DataBasing.UnitTest.csproj
@@ -18,7 +18,7 @@
           <WarningLevel>4</WarningLevel>
     </PropertyGroup>
 
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
         <Optimize>true</Optimize>
         <WarningLevel>0</WarningLevel>
     </PropertyGroup>
